--- a/app/views/facmaxpublishings/_form.html.erb
+++ b/app/views/facmaxpublishings/_form.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/errors', object: @facmaxpublishing %>
 
-<%= form_for @facmaxpublishing, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @facmaxpublishing, :html => {:id => "my-form" ,:class => "form-horizontal", :onsubmit => "return confirm('Are you sure you want to submit the award? (Click Cancel to Review for changes before submitting)');" } do |f| %>
 <p class="form-detail">(Awarded to CSI member Faculty who published maximum articles  - at least 3 - in CSI Publications 
 during 01/07/2016 to 30/06/2017) 
 </p>  
@@ -64,14 +64,14 @@ during 01/07/2016 to 30/06/2017)
     
       <p class="proof"><strong>Upload All the attachments (including photo) in a <strong>single zip</strong> 
     file in the link below , zip file size should be less than 20mb</strong></p>
-      <div>
+     
+     <div>
         
 <%= f.label :attachment %>
         
 <%= f.filepicker_field :attachment , {mimetypes: "application/zip, application/octet-stream" , button_text: "Upload One Zip File" } %> <!-- User#avatar_url is a regular string column -->
     
   </div>
-    
      
 
     <div class="form-group">
