--- a/app/views/highestsponsorshipofcsievents/_form.html.erb
+++ b/app/views/highestsponsorshipofcsievents/_form.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/errors', object: @highestsponsorshipofcsievent %>
 
-<%= form_for @highestsponsorshipofcsievent, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @highestsponsorshipofcsievent, :html => {:id => "my-form" ,:class => "form-horizontal", :onsubmit => "return confirm('Are you sure you want to submit the award? (Click Cancel to Review for changes before submitting)');" } do |f| %>
 <p class="form-detail">(Awarded to the institutional members that extended maximum support for CSI organised events 
 during 01/07/2016 to 30/06/2017) 
 
