--- a/app/views/regionalchapterawards/_form.html.erb
+++ b/app/views/regionalchapterawards/_form.html.erb
@@ -1,7 +1,7 @@
 
 <%= render 'shared/errors', object: @regionalchapteraward %>
 
-<%= form_for @regionalchapteraward, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @regionalchapteraward, :html => {:id => "my-form" ,:class => "form-horizontal", :onsubmit => "return confirm('Are you sure you want to submit the award? (Click Cancel to Review for changes before submitting)');" } do |f| %>
    
      
    <div class="row">
