--- a/app/views/studentmaxpublishings/_form.html.erb
+++ b/app/views/studentmaxpublishings/_form.html.erb
@@ -1,6 +1,6 @@
 <%= render 'shared/errors', object: @studentmaxpublishing %>
 
-<%= form_for @studentmaxpublishing, :html => {:class => "form-horizontal"} do |f| %>
+<%= form_for @studentmaxpublishing, :html => {:id => "my-form" ,:class => "form-horizontal", :onsubmit => "return confirm('Are you sure you want to submit the award? (Click Cancel to Review for changes before submitting)');" } do |f| %>
 <p class="form-detail">(Awarded to CSI Volunteer who published maximum articles in CSI Publications 
 during 01/07/2016 to 30/06/2017) 
 </p>      
