--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -81,8 +81,8 @@
 <% end %>
 
 <footer>
-<p class="credits">Designed and Visualized by Chairman, Div - II, Computer Society of India
-<br></br>
-</p>
-<p class="credits">Credits : Arunachaleeswaran</p>
+<h4 class="credits"><span class="left">Designed and Visualized by Chairman, Div - II, Computer Society of India</span>
+<span class="right">Credits : Arunachaleeswaran</span>
+</h4>
+
 </footer>
