--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -34,3 +34,10 @@
 
 </div>
 </div>
+
+<footer>
+<h4 class="credits"><span class="left">Designed and Visualized by Chairman, Div - II, Computer Society of India</span>
+<span class="right">Credits : Arunachaleeswaran</span>
+</h4>
+
+</footer>
