added show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -202,3 +202,17 @@ div.form-group.sf{
     padding-right: 1em;
    }
 }
+.show-head{
+    text-align: center;
+}
+.show-submitted-by{
+    font-size: bold;
+    font-size: 1.5em;
+}
+.to-underline{
+    text-decoration: underline;
+}
+#submitted-awards{
+    text-align: center;
+    text-decoration: underline;
+}
