--- a/app/views/bestaccreditedstudentbranches/show.html.erb
+++ b/app/views/bestaccreditedstudentbranches/show.html.erb
@@ -206,6 +206,7 @@
     
     <tbody>
       <tr>
+        <td><strong>Student Branch Web site url :</strong></td>
         <td><%= @bestaccreditedstudentbranch.student_branch_website_url %></td>
         
       </tr>
@@ -230,7 +231,7 @@
  <br></br>    
 
 <div>
-  <%= filepicker_image_tag @bestaccreditedstudentbranch.attachment %>
+  <%= filepicker_image_tag @bestaccreditedstudentbranch.attachment_url %>
 </div>
     
    
