--- a/app/views/bestaccreditedstudentbranches/show.html.erb
+++ b/app/views/bestaccreditedstudentbranches/show.html.erb
@@ -231,7 +231,7 @@
  <br></br>    
 
 <div>
-  <%= filepicker_image_tag @bestaccreditedstudentbranch.attachment_url %>
+  <%= filepicker_image_tag @bestaccreditedstudentbranch.attachment %>
 </div>
     
    
