--- a/app/views/bestaccreditedstudentbranches/show.html.erb
+++ b/app/views/bestaccreditedstudentbranches/show.html.erb
@@ -232,7 +232,7 @@
 
 <div>
   
-  <%= filepicker_save_button "Save", @bestaccreditedstudentbranch.attachment , "application/zip, application/octet-stream" %>
+  <%= filepicker_save_button "Save Attachment", @bestaccreditedstudentbranch.attachment , "application/zip, application/octet-stream" %>
 </div>
     
    
