--- a/app/views/bestthesisawards/show.html.erb
+++ b/app/views/bestthesisawards/show.html.erb
@@ -135,3 +135,9 @@
     </div>
    
 <br></br>
+
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @bestthesisaward.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
