--- a/app/views/facmaxpublishings/show.html.erb
+++ b/app/views/facmaxpublishings/show.html.erb
@@ -78,3 +78,9 @@
     
     
 <br></br>
+
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @facmaxpublishing.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
