--- a/app/views/highestsponsorshipofcsievents/show.html.erb
+++ b/app/views/highestsponsorshipofcsievents/show.html.erb
@@ -122,3 +122,10 @@
 
     
 <br></br>
+
+
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @highestsponsorshipofcsievent.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
