--- a/app/views/longestcontinuoussbcs/show.html.erb
+++ b/app/views/longestcontinuoussbcs/show.html.erb
@@ -82,3 +82,8 @@
     
     
   
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @longestcontinuoussbc.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
