--- a/app/views/paperpresenters/show.html.erb
+++ b/app/views/paperpresenters/show.html.erb
@@ -87,3 +87,10 @@
     </div>
    
     <br></br>
+    
+    
+     <div>
+  
+  <%= filepicker_save_button "Save Attachment", @paperpresenter.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
