--- a/app/views/studentbranchactivists/show.html.erb
+++ b/app/views/studentbranchactivists/show.html.erb
@@ -127,3 +127,9 @@
     </div>
 
 <br></br>
+
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @studentbranchactivist.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
