--- a/app/views/bestcsiinternationalstudentseventhosts/show.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/show.html.erb
@@ -112,6 +112,11 @@
     </div>
     
 <br></br>
-   
+ 
+ 
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @bestcsiinternationalstudentseventhost.attachment , "application/zip, application/octet-stream" %>
+</div>  
     
 
