--- a/app/views/studentmaxpublishings/show.html.erb
+++ b/app/views/studentmaxpublishings/show.html.erb
@@ -129,3 +129,9 @@
     </div>
 
 <br></br>
+
+ <div>
+  
+  <%= filepicker_save_button "Save Attachment", @studentmaxpublishing.attachment , "application/zip, application/octet-stream" %>
+</div>  
+    
