--- a/app/views/bestthesisawards/show.html.erb
+++ b/app/views/bestthesisawards/show.html.erb
@@ -101,7 +101,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-3">
         
         <p><%= i.conference_or_journal %></p>
@@ -130,7 +130,7 @@
 
 </div> 
 </div>
-
+</div>
       <% end %>
     </div>
    
