--- a/app/views/individualserviceawards/show.html.erb
+++ b/app/views/individualserviceawards/show.html.erb
@@ -88,7 +88,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-2">
         
         <p><%= i.year %></p>
@@ -108,7 +108,7 @@
 
 </div> 
 </div>
-
+</div>
       <% end %>
     </div>
     
@@ -140,7 +140,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-2">
         
         <p><%= i.date_of_event %></p>
@@ -170,7 +170,7 @@
 
 </div> 
 </div>
-
+</div>
       <% end %>
     </div>
     
