--- a/app/views/paperpresenters/show.html.erb
+++ b/app/views/paperpresenters/show.html.erb
@@ -53,7 +53,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-3">
         
         <p><%= i.name_of_conference %></p>
@@ -81,7 +81,7 @@
 </div>
 
 </div> 
-
+</div>
 
       <% end %>
     </div>
