--- a/app/views/regionalchapterawards/show.html.erb
+++ b/app/views/regionalchapterawards/show.html.erb
@@ -75,7 +75,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-6">
         
         <p><%= i.activity_name %></p>
@@ -86,7 +86,7 @@
       <p><%= i.remarks %></p>
 </div>
 
-
+</div>
 </div> 
 </div>
 
@@ -120,7 +120,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-6">
         
         <p><%= i.activity_name %></p>
@@ -131,7 +131,7 @@
       <p><%= i.remarks %></p>
 </div>
 
-
+</div>
 
 </div> 
 </div>
@@ -164,7 +164,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-6">
         
         <p><%= i.date_of_publication %></p>
@@ -175,7 +175,7 @@
       <p><%= i.title %></p>
 </div>
 
-
+</div>
 </div> 
 </div>
 
