--- a/app/views/bestcsiinternationalstudentseventhosts/show.html.erb
+++ b/app/views/bestcsiinternationalstudentseventhosts/show.html.erb
@@ -79,7 +79,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-3">
         
         <p><%= i.competetion_name %></p>
@@ -105,7 +105,7 @@
 
 
 
-
+</div>
 </div> 
 
       <% end %>
