--- a/app/views/facmaxpublishings/show.html.erb
+++ b/app/views/facmaxpublishings/show.html.erb
@@ -53,7 +53,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-4">
         
         <p><%= i.article_title %></p>
@@ -72,7 +72,7 @@
 
 </div> 
 
-
+</div>
       <% end %>
       </div>
     
