--- a/app/views/highestsponsorshipofcsievents/show.html.erb
+++ b/app/views/highestsponsorshipofcsievents/show.html.erb
@@ -85,7 +85,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-2">
         
         <p><%= i.name_of_event %></p>
@@ -114,7 +114,7 @@
        
 </div>
 </div> 
-
+</div>
 
       <% end %>
     </div>
