--- a/app/views/newsletterawards/show.html.erb
+++ b/app/views/newsletterawards/show.html.erb
@@ -36,7 +36,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-4">
         
         <p><%= i.date_of_publication %></p>
@@ -56,7 +56,7 @@
 
 </div> 
 </div>
-
+</div>
       <% end %>
     
     </div>
