--- a/app/views/studentbranchactivists/show.html.erb
+++ b/app/views/studentbranchactivists/show.html.erb
@@ -103,7 +103,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-3">
         
         <p><%= i.event_name %></p>
@@ -122,7 +122,7 @@
 
 </div> 
 
-
+</div>
       <% end %>
     </div>
 
