--- a/app/views/studentmaxpublishings/show.html.erb
+++ b/app/views/studentmaxpublishings/show.html.erb
@@ -100,7 +100,7 @@
 
 
 <div class="nested-fields">
-
+<div class="row">
 <div class="form-group sf col-md-2">
         
         <p><%= i.no_of_articles_published %></p>
@@ -123,7 +123,7 @@
        
 </div>
 </div> 
-
+</div>
 
       <% end %>
     </div>
