--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     google: ['Roboto Slab', 'Roboto' ,'Josefin Sans','Lato']
   }) %>
 </head>
-<body>
+<body class="container">
 
 <div class="container">
 <div class="row">
